Adds condition to prevent CI job from running on `master` of official repository.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,7 @@ concurrency:
 
 jobs:
   build-and-test:
+    if: ${{ !(github.repository == 'FirebirdSQL/firebird-docker' && github.ref == 'refs/heads/master') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
